--- a/studies/style.css
+++ b/studies/style.css
@@ -7,3 +7,10 @@ body{
     color: rgb(0, 92, 0);
     border-radius: 10px;
 }
+.cute{
+    padding: 10 20 10 20;
+    background-color: rgb(255, 108, 132);
+    color: rgb(243, 0, 41);
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 20px;
+}
