--- a/studies/style.css
+++ b/studies/style.css
@@ -6,6 +6,14 @@ body{
     background-color: rgb(138, 226, 138);
     color: rgb(0, 92, 0);
     border-radius: 10px;
+    transition: 0.3s, ease-in-out;
+}
+.card:hover{
+    background-color: rgb(0, 92, 0);
+    color: rgb(138, 226, 138);
+    box-shadow: 0 4px 8px rgba(23, 245, 15, 0.2);
+    cursor: pointer;
+    
 }
 .cute{
     padding: 10 20 10 20;
@@ -21,4 +29,20 @@ body{
     padding: 20px;
     text-align: justify;
     overflow: auto;
+}
+
+table{
+    margin-top: 100px;
+    width: 100%;
+    border-collapse: collapse;
+}
+tr{
+    border: 1px solid #ddd;
+    height: 150px;
+}
+td, th{
+    padding: 8px;
+    text-align: left;
+    border: 1px solid #ddd;
+    text-align: center;
 }
